--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.0",
+    "nodemon": "^1.19.1",
+    "now": "^15.4.0",
     "standard": "^12.0.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
@@ -13,6 +17,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "ts-node ./src/app.ts",
-    "lint": "standard ./src/**/*.ts"
+    "lint": "standard ./src/**/*.ts",
+    "deploy": "now"
   }
 }
