--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.5.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
+    "@types/mongoose": "^5.5.5",
     "nodemon": "^1.19.1",
     "now": "^15.4.0",
     "standard": "^12.0.1",
