--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.5.13"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.5",
     "nodemon": "^1.19.1",
