--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.13"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/mongoose": "^5.5.5",
     "nodemon": "^1.19.1",
     "now": "^15.4.0",
     "standard": "^12.0.1",
@@ -18,6 +22,6 @@
     "dev": "nodemon",
     "start": "ts-node ./src/app.ts",
     "lint": "standard ./src/**/*.ts",
-    "deploy": "now alias"
+    "deploy": "now; now alias"
   }
 }
