--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mongoose": "^5.5.5",
     "nodemon": "^1.19.1",
     "now": "^15.4.0",
+    "pug": "^2.0.3",
     "standard": "^12.0.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
